[package]
name = "util"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = []
std = ["tokio"]

[dependencies]
cfg-if = { version = "^0.1", default-features = false }
async-trait = { version = "^0.1.24", default-features = false }

tokio = { version = "^0.2", features = ["fs"], default-features = false, optional = true }
