[package]
name = "util"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = []
std = ["async-std"]

[dependencies]
cfg-if = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1.24", default-features = false }

async-std = { version = "^1.6", features = ["default"], default-features = false, optional = true }
