[package]
name = "util"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[features]
default = []
std = ["tokio"]

[dependencies]
cfg-if = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1.24", default-features = false }

tokio = { version = "^1.13", features = ["full"], optional = true }
