[package]
name = "model_viewer_standalone"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[features]

[dependencies]
winit = { version = "^0.25", features = ["wayland", "x11"] }
async-std = { version = "^1.9", features = ["attributes", "tokio1", "unstable"] }
futures = {version = "^0.3" }
nalgebra = { version = "^0.28" }
pretty_env_logger = { version = "^0.4" }
log = { version = "^0.4" }
hashbrown = { version = "^0.11"}

renderer = { version = "^0.1", git = "https://github.com/dlunch/renderer" }
sqpack = { version = "^0.1", features = ["std"], git = "https://github.com/dlunch/sqpack" }
sqpack_extension = { version = "^0.1", features = ["std"], path = "../../libs/sqpack_extension" }
ffxiv_model = { version = "^0.1", path = "../../libs/ffxiv_model" }