[package]
name = "sqpack_extractor"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[features]

[dependencies]
futures = { version = "^0.3", features = ["alloc"], default-features = false }
clap = { version = "^2.33", default-features = false }
async-std = { version = "^1.6", features = ["default", "attributes"], default-features = false }

sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
sqpack_extension = { version = "^0.1", path = "../../libs/sqpack_extension" }
