[package]
name = "sqpack_extractor"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2024"

[features]

[dependencies]
futures = { version = "^0.3" }
clap = { version = "^3.2" }
tokio = { version = "^1.13", features = ["full"] }

sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
sqpack_extension = { version = "^0.1", path = "../../libs/sqpack_extension" }
