[package]
name = "translation_compare"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
yew = { version = "0.16", features = ["web_sys"], default-features = false  }
wasm-bindgen = { version = "^0.2", default-features = false }
wasm-bindgen-futures = { version = "^0.4", default-features = false }
web-sys = { version = "^0.3", features = ["console"], default-features = false }
wee_alloc = { version = "^0.4", default-features = false }
console_error_panic_hook = { version = "^0.1", default-features = false }
console_log = { version = "0.2", features = ["color"] }
log = { version = "0.4" }

sqpack_reader = { version = "^0.1", path = "../../libs/sqpack_reader" }
ffxiv_parser = { version = "^0.1", path = "../../libs/ffxiv_parser" }
util = { version = "^0.1", path = "../../libs/util" }

[dev-dependencies]
wasm-bindgen-test = { version = "^0.3", default-features = false }
futures = { version = "^0.3", default-features = false }
js-sys = { version = "^0.3", default-features = false }
wasm-bindgen-futures = { version = "^0.4", default-features = false }
